fix:overflow hidden

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   background-color: #f1f6f5;
   min-height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
 
   display: flex;
   justify-content: center;
@@ -10,8 +11,8 @@
 
 .mood-tracker {
   background-color: black;
-  width: 42.8rem;
-  height: 92.6rem;
+  max-width: 42.8rem;
+  /* height: 92.6rem; */
 }
 
 .welcome-message {
